# todolist_cpp

./: .gitignore  CMakeLists.txt  README.md
src/: CRUD.cpp  CRUD.hpp  choice_redirection.cpp  choice_redirection.hpp  csv_manager.cpp  csv_manager.hpp  display.cpp  display.hpp  main.cpp  sanitize_input.cpp  sanitize_input.hpp  todo.csv  utils.cpp  utils.hpp  wrong_input.hpp
